updates user
